<resources>
    <string name="app_name">Trạm Xăng - Gas Station</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Gas Station</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="_5_km">5 Km</string>
    <string name="_10_km">10 Km</string>
    <string name="_20_km">20 Km</string>
    <string name="_3_km">3 km (default) </string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send My Location</string>
    <string name="map_type">Map type</string>
    <string name="normal_default">Normal - default</string>
    <string name="radius">Radius</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="about">About</string>
    <string name="help">Help</string>
</resources>
